2.36 (2005-12-04)
=================

User visible changes
--------------------

* Infrastructure:
  + Top-level configure now accepts the option --enable-maintainer-mode
    that affects autoconf-related Makefile targets.  The default value
    is determined based on the presence of the CVS directories.
  + When libsigsegv is not found, print instructions on getting/building
    libsigsegv and bail out; override with --ignore-absence-of-libsigsegv.
  + When --with-dynamic-ffi is supplied, but the FFI fails to build, abort.
  + When --with-readline is supplied, but GNU readline is not found, abort.
  + makemake no longer checks with_module_* variables.

* New function EXT:OPEN-HTTP and macro EXT:WITH-HTTP-INPUT.
  See <http://clisp.cons.org/impnotes/macros3.html#open-http> for details.

* New declaration EXT:NOTSPECIAL undoes the effects of DEFVAR and DEFCONSTANT.
  See <http://clisp.cons.org/impnotes/declarations.html#notspec-decl>
  for details.

* Function EXT:CLHS is now deprecated in favor of DESCRIBE, which can now
  point your web browser to the ANSI CL and CLISP-specific documentation.
  See <http://clisp.cons.org/impnotes/environment-dict.html#describe>
  for details.

* FFI modules can now take advantage of autoconf feature detection.
  See <http://clisp.cons.org/impnotes/dffi.html#ffi-guard> for details.

* New FFI macro FFI:DEF-C-CONST.
  See <http://clisp.cons.org/impnotes/dffi.html#def-c-const> for details.

* New charset BASE64 encodes arbitrary byte sequences with strings of
  printable ASCII characters (4 characters per 3 bytes).
  See <http://clisp.cons.org/impnotes/encoding.html#base64> for details.

* New module readline offers some advanced readline and history features.
  It is a BASE module and is available when both FFI and readline are present.

* SOCKET:SOCKET-SERVICE-PORT is now deprecated in favor of OS:SERVICE.
  See <http://clisp.cons.org/impnotes/syscalls.html#service> for details.
